# rules_pyo3

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel  version.bzl
.github/workflows/: build.yaml
pyo3/: extensions.bzl  repositories.bzl
pyo3/private/: pyo3.bzl  pyo3_toolchain.bzl
pyo3/private/tests/compilation_modes/: string_sum_current_test.py
pyo3/private/tests/runfiles/: reader_test.py
pyo3/private/tests/string_sum/: string_sum_test.py
